--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "glob": "^7.1.7",
     "path-equal": "^1.2.5",
     "safe-stable-stringify": "^2.2.0",
-    "ts-node": "^10.9.1",
     "typescript": "~5.1.0",
     "yargs": "^17.1.1"
   },
@@ -60,7 +59,11 @@
     "mocha": "^9.1.3",
     "prettier": "^2.4.1",
     "source-map-support": "^0.5.20",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3"
+  },
+  "optionalDependencies": {
+    "ts-node": "^10.9.1"
   },
   "scripts": {
     "prepare": "tsc && yarn docs",
